--- a/webcsv.html
+++ b/webcsv.html
@@ -6,7 +6,7 @@
   <script type="text/javascript">
     var goto = location.href;
         goto = goto.replace(/^file:\/\//,'');
-        goto = goto.replace(/\/open-webcsv.html$/,'')
+        goto = goto.replace(/\/webcsv.html$/,'')
         goto = 'http://127.0.0.1:8002/webcsv?f=' + goto;
     document.location.href = goto;
   </script>
